k8s/01-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  # annotations:
  #   cloud.google.com/frontend-config: '{"default": "my-frontend-config"}'
spec:
  selector:
    app: web
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: sojh5741aws/mini:frontend-v27
        ports:
        - containerPort: 80
        imagePullPolicy: Always
