k8s/02-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: was-svc
  annotations:
    cloud.google.com/backend-config: '{"default": "my-backend-config"}'
spec:
  selector:
    app: was
  ports: 
  - port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: was
spec:
  replicas: 3
  selector:
    matchLabels:
      app: was
  template:
    metadata:
      labels:
        app: was
    spec:
      containers:
      - name: was
        image: sojh5741aws/mini:backend-https-v5
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
